# python.train

./: .gitignore.txt  LICENSE  README.md  pyproject.toml
playground/: pyproject.toml
playground/src/playground/: __init__.py  dictionaries.py  nap_spots.py
playground/src/webex/: people.py
wk1/: python_lesson_ch1_ch2.docx  python_lesson_ch1_ch2.md
wk2/: ch3_examples.py  logical.operators.xlsx  python_lesson_ch3.docx  python_lesson_ch3.md
wk3/: ch4_examples.py  data_structures_and_algorithms.docx  data_structures_and_algorithms.md  python_lesson_ch4.docx  python_lesson_ch4.md  python_lesson_ch4_2week.docx  python_lesson_ch4_2week.md
wk4/: rest-apis-explained.md
wk5/: Chapter5_Loops_Lesson_Plan_1.docx  ch5_examples.py  sample_5.py
wk6/: Chapter6_Functions_Lesson.docx  chapter6_functions_demo.py
