[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean Alphonse", email = "alphonses@stifel.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.2",
]

[project.scripts]
playground = "playground:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
